# Scop_42

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GraphicsManager.hpp  Object.hpp
include/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: GraphicsManager.cpp  glad.c  main.cpp  object.cpp
